--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-let sudo=sudo 
-
-
 sudo npm i n --global
 sudo n i lts
 
@@ -15,7 +12,7 @@ Get power supply x 2
 Get raspberry pi kit x 2
 Keyboard
 Mouse
-hdmi breakout cable
+micro hdmi cable x 2
 
 
 chown root
